# RubikNet

./: BlackJack.py  LICENSE  Python_lab.ipynb  README.md  adi.py  adi_blog.md  cube.py  cube_env.py  cube_env_final.py  dataset.py  final_adi.py  main.py  mcts.py  pyproject.toml  tempCodeRunnerFile.py  test_adi.py
blackjack_task/: main.py
cube_solver/: a_star.py  adi.py  analysis.py  beam.py  cube.py  dijktras.py  just_mctc.py  just_mcts.py  main.py  mcts.py  state_capture.py  tempCodeRunnerFile.py  test.py  test_mcts.py
deep_learning/: Readme.md
documentation/: adi_blog.md  report.md
gymnasium/: mountainCar.py  taxi.py  tempCodeRunnerFile.py
gymnasium/blackjack/: main.py
gymnasium/cart_pole/: main.py
gymnasium/mountain_car/: main.py
gymnasium/taxi/: main.py
gymnasium_toy_text/: BlackJack_Arhan.py
hardware/: sender.py  uart.c
reinforcement_learning/: Readme.md
reinforcement_learning/Arhan/: cartpole.py
reinforcement_learning/Rigvedi/: blackjack.py  cartpole.py
task1/: blackjack.py
